Fixed an issue where background images were not covering the entire slide on Edge.

--- a/public/css/foyer-public.css
+++ b/public/css/foyer-public.css
@@ -422,6 +422,8 @@ html {
 .foyer-slide-background.foyer-slide-background-image figure,
 .foyer-slide-background.foyer-slide-background-default figure {
   margin: 0;
+  width: 100%;
+  height: 100%;
 }
 .foyer-slide-background.foyer-slide-background-image figure img,
 .foyer-slide-background.foyer-slide-background-default figure img {
